# swift-academy-agent

./: .gitignore  Makefile  README.md  api_test.md  pyproject.toml
.github/workflows/: ci.yml
src/agent/: service.py
src/api/: __init__.py  main.py  models.py  routes.py
tests/: test_agent_service.py
